--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XLPE ENGINEERING</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>XLPE supports all kind of electrical works </h1></h1>
+    </header>
+    <main>
+        <p>XLPE ENGINEERING</p>
+        <button id="actionButton">Click Me!</button>
+    </main>
+    <footer>
+        <p>&copy; Electrical works KSEB </p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
