--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>XLPE supports all kind of electrical works </h1></h1>
+    <header style="display: flex; align-items: center;">
+        <img src="docs/assets/xlpe.jpg" alt="XLPE Logo" class="logo" style="margin-right: 20px;">
+        <h1>XLPE supports all kind of electrical works</h1>
     </header>
     <main>
         <p>XLPE ENGINEERING</p>
         <button id="actionButton">Click Me!</button>
     </main>
     <footer>
-        <p>&copy; Electrical works KSEB </p>
+        <p>&copy; XLPE ENGINEERING </p>
     </footer>
     <script src="script.js"></script>
 </body>
