--- a/XLPE.Html
+++ b/XLPE.Html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XLPE ENGINEERING</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header style="display: flex; align-items: center;">
+        <img src="docs/assets/XLPE_LOGO.jpg?version=1" alt="XLPE Logo" class="logo" style="margin-right: 20px;">
+        <h1>XLPE ENGINEERING</h1>
+    </header>
+    <main>
+        <p>Electrical Contractor | Electrical Works</p>
+    </main>
+    <footer>
+        <p>&copy; XLPE ENGINEERING</p>
+    </footer>
+</body>
+</html>
